@startuml

title __RESERVATIONS's Class Diagram__\n

  namespace dubois.airbnb {
    namespace reservations {
      class dubois.airbnb.reservations.Reservation {
          - dateDeReservation : Date
          - estValidee : boolean
          - identifiant : int
          + Reservation()
          + afficher()
      }
    }
  }
  

  namespace dubois.airbnb {
    namespace reservations {
      class dubois.airbnb.reservations.Sejour {
          - dateArrivee : Date
          - nbNuits : int
          - nbVoyageurs : int
          + Sejour()
          + afficher()
      }
    }
  }
  

  dubois.airbnb.reservations.Reservation o-- dubois.airbnb.reservations.Sejour : sejour
  dubois.airbnb.reservations.Reservation o-- dubois.airbnb.utilisateurs.Personne : voyageur
  dubois.airbnb.reservations.Sejour o-- dubois.airbnb.logements.Logement : logement


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
